8219635: aarch64: missing LoadStore barrier in TemplateTable::fast_storefield Reviewed-by: aph Contributed-by: patrick@os.amperecomputing.com